--- a/src/components/main/Main.module.scss
+++ b/src/components/main/Main.module.scss
@@ -1,6 +1,11 @@
 .main_page {
   margin-top: 1.5rem;
 
+  p {
+    font-size: 0.88rem;
+    font-weight: 400;
+  }
+
   &_head {
     background: url("/src/assets/main_bg.jpg") center top / cover no-repeat;
     border-radius: 1.625rem;
@@ -21,13 +26,14 @@
         background: white;
         width: min-content;
         color: black;
-        padding: 0.375rem 2rem 0.5rem 2rem;
+        padding: 0.375rem 2rem;
         border-radius: 50rem;
         border: none;
         font-size: 11px;
         justify-self: end;
         will-change: filter;
         transition: filter 300ms;
+
         &:hover {
           filter: drop-shadow(0 0 1em #61dafbaa);
         }
@@ -37,6 +43,7 @@
         justify-self: end;
         will-change: filter;
         transition: filter 300ms;
+
         &:hover {
           filter: drop-shadow(0 0 1em #646cffaa);
         }
@@ -49,7 +56,7 @@
       }
 
       .logo:hover {
-        filter: drop-shadow(0 0 2em #646cffaa);
+        filter: drop-shadow(0 0 1em #646cffaa);
       }
     }
 
@@ -58,6 +65,7 @@
 
       h1 {
         margin: 1.5rem 0;
+        line-height: 107%;
       }
 
       p {
@@ -76,52 +84,153 @@
     align-items: start;
     gap: 1rem;
     margin-top: 4.5rem;
+
     .txt {
       margin-right: auto;
       margin-top: 2rem;
+
       .list {
         list-style: none;
         padding: 0;
+
         li {
           font-size: 1.25rem;
           font-weight: 500;
           margin: .75rem 0;
+
           summary {
             display: flex;
             border-bottom: 0.0625rem solid rgb(134, 134, 134);
             gap: 8.625rem;
             width: 455px;
+
             &::marker {
               content: '';
             }
           }
+
           p {
             width: 520px;
-            font-size: 0.88rem;
-            font-weight: 400;
           }
         }
       }
     }
+
     .car {
       border-radius: 1.15rem;
-      background: linear-gradient(180.00deg, rgb(255, 216, 85) 69.915%,rgb(244, 199, 48) 99.666%);
+      background: linear-gradient(180.00deg, rgb(255, 216, 85) 69.915%, rgb(244, 199, 48) 99.666%);
       line-height: 1.1;
       margin-top: .625rem;
+
       & > div:nth-child(1) {
         font-size: 2.75rem;
         font-weight: 700;
         padding: 1.25rem 1.5rem 0;
       }
+
       & > div:nth-child(2) {
         font-size: 1.22rem;
         font-weight: 600;
         padding: 0 1.5rem;
       }
+
       img {
         position: relative;
         right: -5px;
       }
+    }
+  }
+
+  &_steps {
+    .box {
+      display: flex;
+      gap: 3rem;
+
+      &_item {
+        position: relative;
+        &:after {
+          border: 0.06rem solid rgb(188, 188, 188);
+          position: absolute;
+          content: '';
+          top: 21px;
+          right: 0;
+          width: 75%;
+          height: 0;
+        }
+        &:last-of-type {
+          color: white;
+          margin-top: -3rem;
+        }
+
+        span {
+          font-size: 1.5rem;
+          font-weight: 700;
+          background: rgb(217, 217, 217);
+          border-radius: 50%;
+          width: 45px;
+          height: 45px;
+          display: inline-flex;
+          color: white;
+          align-items: center;
+          place-content: center;
+        }
+
+        div {
+          margin-top: 1rem;
+          font-size: 1rem;
+          font-weight: 700;
+        }
+
+        p {
+          color: rgb(51, 51, 51);
+          font-size: 0.67rem;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+  &_faq {
+    margin-top: 3rem;
+    border-radius: 1.67rem;
+    background: rgb(248, 248, 248);
+    padding: 2.5rem 0 3rem;
+    h2 {
+      text-align: center;
+    }
+    details {
+      width: 828px;
+      margin: 0 auto;
+      border-bottom: 0.0625rem solid rgb(221, 221, 221);
+      summary {
+        font-size: 1.25rem;
+        font-weight: 500;
+        padding: .75rem 0;
+        background: url("/src/assets/icon_arrow_down.svg") right center no-repeat;
+        &::marker {
+          content: '';
+        }
+      }
+      p {
+        margin-top: 0;
+      }
+      &[open] {
+        summary {
+          background: url("/src/assets/icon_arrow_up.svg") right center no-repeat;
+        }
+      }
+    }
+  }
+  .footer {
+    text-align: center;
+    width: 472px;
+    margin: 2rem auto;
+    p {
+      color: rgb(130, 130, 130);
+      font-size: 0.58rem;
+    }
+    a {
+      color: rgb(51, 51, 51);
+      font-size: 0.58rem;
     }
   }
 }
