--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,10 @@
 :root {
   font-family: Roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-optical-sizing: none;
+  font-optical-sizing: auto;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
-  color: black;
+  color: rgb(14, 14, 14);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
